Archive2/55/ae99f70e032ae8/output
main.cpp: In function ‘char* foo(char*)’:
main.cpp:8:31: error: conversion from ‘const char [6]’ to non-scalar type ‘std::stringstream {aka std::basic_stringstream<char>}’ requested
     std::stringstream sData = "A,B,C";
                               ^
main.cpp:14:31: error: ‘newKey’ was not declared in this scope
     while(std::getline(sData, newKey))
                               ^
main.cpp:17:40: error: ‘strdup’ was not declared in this scope
     return strdup(tMap[lnumber].c_str());
                                        ^
main.cpp:9:10: warning: unused variable ‘delim’ [-Wunused-variable]
     char delim = ',';                 
          ^
main.cpp:18:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
